# fantasy-premier-league-3.0

fantasy-premier-league-ui/src/components/: LeagueTable.jsx
fpl-api/: Procfile  main.py  pyproject.toml
